# oop-inventory-system

./: .gitignore  CMakeLists.txt  README.md  db.config.sample  main.cpp
.github/workflows/: cmake.yml
core/headers/: Angajat.h  Controller.h  CrudRepository.h  Depozit.h  Exceptions.h  JsonEntity.h  ObjectFactory.h  Produs.h  Repository.h  TableField.h  Tranzactie.h
core/sources/: Angajat.cpp  Depozit.cpp  Produs.cpp  Repository.tpp  TableField.cpp  Tranzactie.cpp
headers/: Angajat.h  Depozit.h  Produs.h  Tranzactie.h
infra/headers/: AngajatRepository.h  DepoziteRepository.h  ProdusRepository.h  SQLRepository.h  TranzactieRepository.h  Utilities.h
infra/sources/: AngajatRepository.cpp  DepoziteRepository.cpp  ProdusRepository.cpp  SQLRepository.cpp  TranzactieRepository.cpp
libs/: build_dependencies.sh  build_deps.sh
service/headers/: AngajatController.h  DepozitController.h  HTTPListener.h  ProdusController.h  TranzactieController.h  WebService.h
service/sources/: AngajatController.cpp  DepozitController.cpp  HTTPListener.cpp  ProdusController.cpp  TranzactieController.cpp  WebService.cpp
sources/: Angajat.cpp  Depozit.cpp  Produs.cpp  Tranzactie.cpp
sql/: angajati.sql  depozite.sql  produse.sql  tranzactii.sql
